Fixed Contacts Overflow

--- a/dn_club_rush/src/flask1/static/contacts-styles.css
+++ b/dn_club_rush/src/flask1/static/contacts-styles.css
@@ -1,24 +1,37 @@
 .contact {
-    background-color: #F1F1F1;
-    border-spacing: 20px;
+  background-color: #f1f1f1;
+  border-spacing: 20px;
 }
 
 .filler {
-    width: 100%;
+  width: 100%;
 }
 
 .all-contacts {
-    font-family: 'Poppins', sans-serif;
-    display: inline-block;
-    font-weight: 100;
-    font-size: 20px;
-    margin-top: 50px;
-    margin-left: 10%;
-    width: 80%;
+  font-family: "Poppins", sans-serif;
+  display: inline-block;
+  font-weight: 100;
+  font-size: 20px;
+  margin-top: 50px;
+  margin-left: 10%;
+  width: 80%;
 }
 
 @media (max-width: 430px) {
-    .all-contacts {
-        margin-left: 5%;
-    }
+  .all-contacts {
+    margin-left: 5%;
+  }
+}
+
+@media (max-width: 635px) {
+  .filler {
+    display: none;
+  }
+}
+
+@media (max-width: 635px) {
+  td {
+    overflow-wrap: anywhere;
+    word-break: break-word;
+  }
 }
